поменял архитектуру проекта

--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -11,11 +11,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "698d0907",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "86eb32b8",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "[40, 41, 42, 43, 44, 45, 46, 47, 48]"
+    "RANDOM_STATES = [40, 41, 42, 43, 44]"
    ]
   },
   {
@@ -28,25 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "80f8cfc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# accuracy = np.array([0.61, 0.64, 0.59, 0.55, 0.58, 0.64, 0.58, 0.59, 0.53])\n",
-    "# precision = np.array([0.60, 0.63, 0.56,  0.53, 0.57, 0.65, 0.56, 0.59, 0.53])\n",
-    "# recall = np.array([0.60, 0.63, 0.58, 0.55, 0.58, 0.64, 0.58, 0.59, 0.53])\n",
-    "# f1 = np.array([0.60, 0.62, 0.57, 0.53, 0.58, 0.64, 0.56, 0.59, 0.53])\n",
-    "\n",
-    "accuracy = np.array([0.61, 0.64, 0.59, 0.55, 0.58])\n",
-    "precision = np.array([0.60, 0.63, 0.56, 0.53, 0.57])\n",
-    "recall = np.array([0.60, 0.63, 0.58, 0.55, 0.58])\n",
-    "f1 = np.array([0.60, 0.62, 0.57, 0.53, 0.58])"
+    "accuracy = np.array([0.5, 0.6, 0.56, 0.62, 0.55])\n",
+    "precision = np.array([0.5, 0.58, 0.59, 0.62, 0.52])\n",
+    "recall = np.array([0.5, 0.6, 0.56, 0.62, 0.55])\n",
+    "f1 = np.array([0.5, 0.57, 0.5, 0.62, 0.52])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "22ca21e9",
    "metadata": {},
    "outputs": [
@@ -54,10 +51,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy mean: 0.594; accuracy std 0.03006659275674581\n",
-      "precision mean: 0.5780000000000001; precision std 0.03429285639896448\n",
-      "recall mean: 0.5880000000000001; recall std 0.02638181191654583\n",
-      "f1 mean: 0.5800000000000001; f1 std 0.030331501776206193\n"
+      "accuracy mean: 0.5660000000000001; accuracy std 0.041761226035642196\n",
+      "precision mean: 0.562; precision std 0.044899888641287286\n",
+      "recall mean: 0.5660000000000001; recall std 0.041761226035642196\n",
+      "f1 mean: 0.542; f1 std 0.046647615158762396\n"
      ]
     }
    ],
@@ -86,25 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c2b96d61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# accuracy = np.array([0.61, 0.61, 0.59, 0.61, 0.59, 0.59, 0.58, 0.56, 0.54])\n",
-    "# precision = np.array([0.60, 0.60, 0.54, 0.59, 0.57, 0.41, 0.56, 0.57, 0.53])\n",
-    "# recall = np.array([0.60, 0.60, 0.58, 0.61, 0.58, 0.59, 0.58, 0.56, 0.54])\n",
-    "# f1 = np.array([0.60, 0.60, 0.54, 0.58, 0.58, 0.48, 0.56, 0.56, 0.53])\n",
-    "\n",
-    "accuracy = np.array([0.61, 0.61, 0.59, 0.61, 0.59])\n",
-    "precision = np.array([0.60, 0.60, 0.54, 0.59, 0.57])\n",
-    "recall = np.array([0.60, 0.60, 0.58, 0.61, 0.58])\n",
-    "f1 = np.array([0.60, 0.60, 0.54, 0.58, 0.58])"
+    "accuracy = np.array([0.49, 0.6, 0.54, 0.6, 0.55])\n",
+    "precision = np.array([0.49, 0.58, 0.53, 0.6, 0.52])\n",
+    "recall = np.array([0.49, 0.6, 0.54, 0.6, 0.55])\n",
+    "f1 = np.array([0.49, 0.57, 0.53, 0.6, 0.52])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f2068dab",
    "metadata": {},
    "outputs": [
@@ -112,10 +104,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy mean: 0.602; accuracy std 0.00979795897113272\n",
-      "precision mean: 0.58; precision std 0.02280350850198274\n",
-      "recall mean: 0.594; recall std 0.01200000000000001\n",
-      "f1 mean: 0.58; f1 std 0.021908902300206624\n"
+      "accuracy mean: 0.556; accuracy std 0.041279534881100574\n",
+      "precision mean: 0.5439999999999999; precision std 0.04029888335921975\n",
+      "recall mean: 0.556; recall std 0.041279534881100574\n",
+      "f1 mean: 0.542; f1 std 0.03867815921162742\n"
      ]
     }
    ],
@@ -136,25 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b893443a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# accuracy = np.array([0.65, 0.53, 0.59, 0.60, 0.56, 0.59, 0.60, 0.59, 0.59])\n",
-    "# precision = np.array([0.64, 0.52, 0.54, 0.59, 0.57, 0.41, 0.59, 0.58, 0.56])\n",
-    "# recall = np.array([0.64, 0.53, 0.58, 0.59, 0.56, 0.59, 0.60, 0.59, 0.58])\n",
-    "# f1 = np.array([0.63, 0.52, 0.54, 0.59, 0.56, 0.48, 0.59, 0.58, 0.55])\n",
-    "\n",
-    "accuracy = np.array([0.65, 0.53, 0.59, 0.60, 0.56])\n",
-    "precision = np.array([0.64, 0.52, 0.54, 0.59, 0.57])\n",
-    "recall = np.array([0.64, 0.53, 0.58, 0.59, 0.56])\n",
-    "f1 = np.array([0.63, 0.52, 0.54, 0.59, 0.56])"
+    "accuracy = np.array([0.53, 0.54, 0.56, 0.55, 0.55])\n",
+    "precision = np.array([0.52, 0.55, 0.59, 0.55, 0.52])\n",
+    "recall = np.array([0.52, 0.54, 0.56, 0.55, 0.55])\n",
+    "f1 = np.array([0.52, 0.54, 0.5, 0.55, 0.52])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a4e9ca1b",
    "metadata": {},
    "outputs": [
@@ -162,10 +149,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy mean: 0.5860000000000001; accuracy std 0.04029888335921976\n",
-      "precision mean: 0.572; precision std 0.041665333311999314\n",
-      "recall mean: 0.58; recall std 0.03633180424916989\n",
-      "f1 mean: 0.568; f1 std 0.03867815921162742\n"
+      "accuracy mean: 0.546; accuracy std 0.01019803902718558\n",
+      "precision mean: 0.546; precision std 0.025768197453450235\n",
+      "recall mean: 0.5439999999999999; recall std 0.013564659966250548\n",
+      "f1 mean: 0.526; f1 std 0.01743559577416271\n"
      ]
     }
    ],
@@ -194,25 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a7ad5a88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# accuracy = np.array([0.61, 0.60, 0.58, 0.55, 0.57, 0.59, 0.58, 0.57, 0.53])\n",
-    "# precision = np.array([0.60, 0.59, 0.55, 0.52, 0.56, 0.41, 0.56, 0.58, 0.53])\n",
-    "# recall = np.array([0.60, 0.59, 0.57, 0.54, 0.57, 0.59, 0.58, 0.57, 0.53])\n",
-    "# f1 = np.array([0.60, 0.58, 0.54, 0.52, 0.56, 0.48, 0.56, 0.57, 0.53])\n",
-    "\n",
-    "accuracy = np.array([0.61, 0.60, 0.58, 0.55, 0.57])\n",
-    "precision = np.array([0.60, 0.59, 0.55, 0.52, 0.56])\n",
-    "recall = np.array([0.60, 0.59, 0.57, 0.54, 0.57])\n",
-    "f1 = np.array([0.60, 0.58, 0.54, 0.52, 0.56])"
+    "accuracy = np.array([0.53, 0.6, 0.52, 0.62, 0.55])\n",
+    "precision = np.array([0.53, 0.58, 0.52, 0.62, 0.52])\n",
+    "recall = np.array([0.53, 0.6, 0.52, 0.62, 0.55])\n",
+    "f1 = np.array([0.53, 0.57, 0.52, 0.62, 0.52])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "701d4b34",
    "metadata": {},
    "outputs": [
@@ -220,10 +202,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy mean: 0.582; accuracy std 0.02135415650406261\n",
-      "precision mean: 0.564; precision std 0.02870540018881463\n",
-      "recall mean: 0.574; recall std 0.020591260281973982\n",
-      "f1 mean: 0.56; f1 std 0.02828427124746188\n"
+      "accuracy mean: 0.5640000000000001; accuracy std 0.03929376540877698\n",
+      "precision mean: 0.554; precision std 0.03979949748426478\n",
+      "recall mean: 0.5640000000000001; recall std 0.03929376540877698\n",
+      "f1 mean: 0.552; f1 std 0.038678159211627414\n"
      ]
     }
    ],
@@ -244,25 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d8f65147",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# accuracy = np.array([0.59, 0.66, 0.59, 0.55, 0.56, 0.59, 0.60, 0.54, 0.61])\n",
-    "# precision = np.array([0.57, 0.65, 0.54, 0.52, 0.57, 0.58, 0.60, 0.54, 0.61])\n",
-    "# recall = np.array([0.58, 0.65, 0.58, 0.55, 0.56, 0.58, 0.60, 0.54, 0.61])\n",
-    "# f1 = np.array([0.56, 0.64, 0.54, 0.53, 0.56, 0.58, 0.59, 0.54, 0.60])\n",
-    "\n",
-    "accuracy = np.array([0.59, 0.66, 0.59, 0.55, 0.56])\n",
-    "precision = np.array([0.57, 0.65, 0.54, 0.52, 0.57])\n",
-    "recall = np.array([0.58, 0.65, 0.58, 0.55, 0.56])\n",
-    "f1 = np.array([0.56, 0.64, 0.54, 0.53, 0.56])"
+    "accuracy = np.array([0.52, 0.6, 0.56, 0.56, 0.57])\n",
+    "precision = np.array([0.51, 0.6, 0.56, 0.56, 0.55])\n",
+    "recall = np.array([0.52, 0.6, 0.56, 0.56, 0.57])\n",
+    "f1 = np.array([0.51, 0.6, 0.55, 0.56, 0.55])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4be8195f",
    "metadata": {},
    "outputs": [
@@ -270,10 +247,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy mean: 0.59; accuracy std 0.03847076812334268\n",
-      "precision mean: 0.5700000000000001; precision std 0.04427188724235731\n",
-      "recall mean: 0.5840000000000001; recall std 0.0349857113690718\n",
-      "f1 mean: 0.5660000000000001; f1 std 0.03878143885933062\n"
+      "accuracy mean: 0.562; accuracy std 0.02561249694973138\n",
+      "precision mean: 0.556; precision std 0.028705400188814643\n",
+      "recall mean: 0.562; recall std 0.02561249694973138\n",
+      "f1 mean: 0.5539999999999999; f1 std 0.02870540018881464\n"
      ]
     }
    ],
@@ -294,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "14ea4164",
    "metadata": {},
    "outputs": [],
@@ -307,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "842b3c30",
    "metadata": {},
    "outputs": [
@@ -319,6 +296,51 @@
       "precision mean: 0.45599999999999996; precision std 0.05678027826631358\n",
       "recall mean: 0.57; recall std 0.02756809750418042\n",
       "f1 mean: 0.49800000000000005; f1 std 0.024819347291981736\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'accuracy mean: {accuracy.mean()}; accuracy std {accuracy.std()}')\n",
+    "print(f'precision mean: {precision.mean()}; precision std {precision.std()}')\n",
+    "print(f'recall mean: {recall.mean()}; recall std {recall.std()}')\n",
+    "print(f'f1 mean: {f1.mean()}; f1 std {f1.std()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a69318f",
+   "metadata": {},
+   "source": [
+    "# Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fdc34c80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = np.array([0.58, 0.64, 0.62, 0.63, 0.64])\n",
+    "precision = np.array([0.56, 0.64, 0.62, 0.61, 0.63])\n",
+    "recall = np.array([0.58, 0.64, 0.62, 0.62, 0.64])\n",
+    "f1 = np.array([0.57, 0.64, 0.62, 0.61, 0.63])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e8d85713",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy mean: 0.622; accuracy std 0.02227105745132011\n",
+      "precision mean: 0.612; precision std 0.027856776554368225\n",
+      "recall mean: 0.62; recall std 0.021908902300206663\n",
+      "f1 mean: 0.614; f1 std 0.024166091947189168\n"
      ]
     }
    ],
