поменял LABEL на TARGET

--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -74,8 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y = df[defs.LABEL]\n",
-    "X = df.drop(defs.LABEL, axis=1)"
+    "Y = df[defs.TARGET]\n",
+    "X = df.drop(defs.TARGET, axis=1)"
    ]
   },
   {
