--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -51,9 +51,9 @@
     }
    ],
    "source": [
-    "norm = (df[defs.LABEL] == defs.LABELS[0]).sum()\n",
-    "benign_tumor = (df[defs.LABEL] == defs.LABELS[1]).sum()\n",
-    "malignant_tumor = (df[defs.LABEL] == defs.LABELS[2]).sum()\n",
+    "norm = (df[defs.TARGET] == defs.LABELS[0]).sum()\n",
+    "benign_tumor = (df[defs.TARGET] == defs.LABELS[1]).sum()\n",
+    "malignant_tumor = (df[defs.TARGET] == defs.LABELS[2]).sum()\n",
     "\n",
     "viz.plot_distribution(norm, benign_tumor, malignant_tumor)"
    ]
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "viz.plot_hists(df, defs.QUESTION_2, defs.LABEL, bins=82, xlim=(0, 85))"
+    "viz.plot_hists(df, defs.QUESTION_2, defs.TARGET, bins=82, xlim=(0, 85))"
    ]
   },
   {
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_3, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_3, defs.TARGET)"
    ]
   },
   {
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "viz.plot_hists(df, defs.QUESTION_4, defs.LABEL, bins=60, xlim=(0, 65))"
+    "viz.plot_hists(df, defs.QUESTION_4, defs.TARGET, bins=60, xlim=(0, 65))"
    ]
   },
   {
@@ -175,7 +175,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_5, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_5, defs.TARGET)"
    ]
   },
   {
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_6, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_6, defs.TARGET)"
    ]
   },
   {
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_7, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_7, defs.TARGET)"
    ]
   },
   {
@@ -262,7 +262,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_8, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_8, defs.TARGET)"
    ]
   },
   {
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_9, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_9, defs.TARGET)"
    ]
   },
   {
@@ -320,7 +320,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_10, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_10, defs.TARGET)"
    ]
   },
   {
@@ -349,7 +349,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_11, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_11, defs.TARGET)"
    ]
   },
   {
@@ -378,7 +378,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_12, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_12, defs.TARGET)"
    ]
   },
   {
@@ -407,7 +407,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_13, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_13, defs.TARGET)"
    ]
   },
   {
@@ -436,7 +436,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_14, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_14, defs.TARGET)"
    ]
   },
   {
@@ -465,7 +465,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_15, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_15, defs.TARGET)"
    ]
   },
   {
@@ -494,7 +494,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_16, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_16, defs.TARGET)"
    ]
   },
   {
@@ -523,7 +523,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_17, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_17, defs.TARGET)"
    ]
   },
   {
@@ -552,7 +552,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_18, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_18, defs.TARGET)"
    ]
   },
   {
@@ -581,7 +581,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_19, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_19, defs.TARGET)"
    ]
   },
   {
@@ -610,7 +610,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_20, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_20, defs.TARGET)"
    ]
   },
   {
@@ -641,7 +641,7 @@
     }
    ],
    "source": [
-    "viz.plot_hists(df, defs.QUESTION_22, defs.LABEL, bins=80, xlim=(0, 85))"
+    "viz.plot_hists(df, defs.QUESTION_22, defs.TARGET, bins=80, xlim=(0, 85))"
    ]
   },
   {
@@ -670,7 +670,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_23, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_23, defs.TARGET)"
    ]
   },
   {
@@ -701,7 +701,7 @@
     }
    ],
    "source": [
-    "viz.plot_hists(df, defs.QUESTION_24, defs.LABEL, bins=40, xlim=(0, 45))"
+    "viz.plot_hists(df, defs.QUESTION_24, defs.TARGET, bins=40, xlim=(0, 45))"
    ]
   },
   {
@@ -730,7 +730,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_25, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_25, defs.TARGET)"
    ]
   },
   {
@@ -759,7 +759,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_26, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_26, defs.TARGET)"
    ]
   },
   {
@@ -788,7 +788,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_27, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_27, defs.TARGET)"
    ]
   },
   {
@@ -817,7 +817,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_28, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_28, defs.TARGET)"
    ]
   },
   {
@@ -846,7 +846,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_29, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_29, defs.TARGET)"
    ]
   },
   {
@@ -875,7 +875,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_30, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_30, defs.TARGET)"
    ]
   },
   {
@@ -904,7 +904,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_31, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_31, defs.TARGET)"
    ]
   },
   {
@@ -933,7 +933,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_32, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_32, defs.TARGET)"
    ]
   },
   {
@@ -962,7 +962,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_33, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_33, defs.TARGET)"
    ]
   },
   {
@@ -991,7 +991,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_34, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_34, defs.TARGET)"
    ]
   },
   {
@@ -1020,7 +1020,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_35, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_35, defs.TARGET)"
    ]
   },
   {
@@ -1203,7 +1203,7 @@
     }
    ],
    "source": [
-    "viz.plot_pies(df, defs.QUESTION_10, defs.LABEL)"
+    "viz.plot_pies(df, defs.QUESTION_10, defs.TARGET)"
    ]
   },
   {
