--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -621,7 +621,7 @@
     "norm_df = norm_df.drop(['?1'], axis=1)\n",
     "norm_df = norm_df.drop(['?2'], axis=1)\n",
     "# добавление столбца с меткой\n",
-    "norm_df[defs.LABEL] = [defs.LABELS[0]] * NORM_N_ROWS\n",
+    "norm_df[defs.TARGET] = [defs.LABELS[0]] * NORM_N_ROWS\n",
     "\n",
     "benign_tumor_df = pd.read_excel(BENIGN_TUMOR_PATH, index_col=0, nrows=BENIGN_TUMOR_N_ROWS)\n",
     "# удаление ненужных столбцов\n",
@@ -630,7 +630,7 @@
     "benign_tumor_df = benign_tumor_df.drop(['?1'], axis=1)\n",
     "benign_tumor_df = benign_tumor_df.drop(['?2'], axis=1)\n",
     "# добавление столбца с меткой\n",
-    "benign_tumor_df[defs.LABEL] = [defs.LABELS[1]] * BENIGN_TUMOR_N_ROWS\n",
+    "benign_tumor_df[defs.TARGET] = [defs.LABELS[1]] * BENIGN_TUMOR_N_ROWS\n",
     "\n",
     "malignant_tumor_df = pd.read_excel(MALIGNANT_TUMOR_PATH, index_col=0, nrows=MALIGNANT_TUMOR_N_ROWS)\n",
     "# удаление ненужных столбцов\n",
@@ -640,7 +640,7 @@
     "malignant_tumor_df = malignant_tumor_df.drop(['?1'], axis=1)\n",
     "malignant_tumor_df = malignant_tumor_df.drop(['?2'], axis=1)\n",
     "# добавление столбца с меткой\n",
-    "malignant_tumor_df[defs.LABEL] = [defs.LABELS[2]] * MALIGNANT_TUMOR_N_ROWS\n",
+    "malignant_tumor_df[defs.TARGET] = [defs.LABELS[2]] * MALIGNANT_TUMOR_N_ROWS\n",
     "\n",
     "df = pd.concat([norm_df, benign_tumor_df, malignant_tumor_df], ignore_index=True)\n",
     "columns = {\n",
@@ -710,7 +710,7 @@
     }
    ],
    "source": [
-    "viz.plot_hists(df, defs.QUESTION_2, defs.LABEL, bins=120, xlim=(0, 125))"
+    "viz.plot_hists(df, defs.QUESTION_2, defs.TARGET, bins=120, xlim=(0, 125))"
    ]
   },
   {
@@ -950,7 +950,7 @@
    ],
    "source": [
     "df[defs.QUESTION_4] = df[defs.QUESTION_4].apply(convert_time_interval)\n",
-    "viz.plot_hists(df, defs.QUESTION_4, defs.LABEL, bins=60, xlim=(0, 65))"
+    "viz.plot_hists(df, defs.QUESTION_4, defs.TARGET, bins=60, xlim=(0, 65))"
    ]
   },
   {
@@ -1878,7 +1878,7 @@
    ],
    "source": [
     "df[defs.QUESTION_22] = df[defs.QUESTION_22].apply(convert_time_interval)\n",
-    "viz.plot_hists(df, defs.QUESTION_22, defs.LABEL, bins=80, xlim=(0, 85))"
+    "viz.plot_hists(df, defs.QUESTION_22, defs.TARGET, bins=80, xlim=(0, 85))"
    ]
   },
   {
@@ -2019,7 +2019,7 @@
    ],
    "source": [
     "df[defs.QUESTION_24] = df[defs.QUESTION_24].apply(convert_time_interval)\n",
-    "viz.plot_hists(df, defs.QUESTION_24, defs.LABEL, bins=40, xlim=(0, 45))"
+    "viz.plot_hists(df, defs.QUESTION_24, defs.TARGET, bins=40, xlim=(0, 45))"
    ]
   },
   {
