--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -255,8 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y = df[defs.LABEL]\n",
-    "X = df.drop(defs.LABEL, axis=1).astype('float64')"
+    "Y = df[defs.TARGET]\n",
+    "X = df.drop(defs.TARGET, axis=1).astype('float64')"
    ]
   },
   {
@@ -319,9 +319,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_train = pd.get_dummies(Y_train, prefix=defs.LABEL)\n",
-    "Y_val = pd.get_dummies(Y_val, prefix=defs.LABEL)\n",
-    "Y_test = pd.get_dummies(Y_test, prefix=defs.LABEL)"
+    "Y_train = pd.get_dummies(Y_train, prefix=defs.TARGET)\n",
+    "Y_val = pd.get_dummies(Y_val, prefix=defs.TARGET)\n",
+    "Y_test = pd.get_dummies(Y_test, prefix=defs.TARGET)"
    ]
   },
   {
