--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -25,7 +25,7 @@
    "id": "9137f306",
    "metadata": {},
    "source": [
-    "# Label Encoding"
+    "## scikit-learn: Label Encoding категориальных и ранговых признаков"
    ]
   },
   {
@@ -70,15 +70,7 @@
    "id": "428a9670",
    "metadata": {},
    "source": [
-    "# One-Hot Encoding"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e952308f",
-   "metadata": {},
-   "source": [
-    "кодирование только категориальных признаков"
+    "## scikit-learn: Label Encoding ранговых и One-Hot Encoding категориальных признаков"
    ]
   },
   {
@@ -123,7 +115,7 @@
    "id": "249c9d7b",
    "metadata": {},
    "source": [
-    "кодироввание категориальных и ранговых признаков"
+    "## scikit-learn: One-Hot Encoding категориальных и ранговых признаков"
    ]
   },
   {
@@ -168,15 +160,7 @@
    "id": "a21ee2ae",
    "metadata": {},
    "source": [
-    "# Target Encoding"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17bc3a6e",
-   "metadata": {},
-   "source": [
-    "кодирование только категориальных признаков"
+    "## scikit-learn: Multi-Class Target Encoding категориальных и Label Encoding ранговых признаков"
    ]
   },
   {
@@ -221,7 +205,7 @@
    "id": "d8cd07a6",
    "metadata": {},
    "source": [
-    "кодирование категориальных и ранговых признаков"
+    "## scikit-learn: Multi-Class Target Encoding категориальных и ранговых признаков"
    ]
   },
   {
@@ -231,10 +215,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy = np.array([0.52, 0.6, 0.56, 0.56, 0.57])\n",
-    "precision = np.array([0.51, 0.6, 0.56, 0.56, 0.55])\n",
-    "recall = np.array([0.52, 0.6, 0.56, 0.56, 0.57])\n",
-    "f1 = np.array([0.51, 0.6, 0.55, 0.56, 0.55])"
+    "accuracy = np.array([0.56, 0.55, 0.55, 0.57, 0.55])\n",
+    "precision = np.array([0.55, 0.54, 0.55, 0.57, 0.53])\n",
+    "recall = np.array([0.56, 0.55, 0.55, 0.57, 0.55])\n",
+    "f1 = np.array([0.55, 0.54, 0.55, 0.57, 0.52])"
    ]
   },
   {
@@ -247,10 +231,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy mean: 0.562; accuracy std 0.02561249694973138\n",
-      "precision mean: 0.556; precision std 0.028705400188814643\n",
-      "recall mean: 0.562; recall std 0.02561249694973138\n",
-      "f1 mean: 0.5539999999999999; f1 std 0.02870540018881464\n"
+      "accuracy mean: 0.556; accuracy std 0.007999999999999967\n",
+      "precision mean: 0.548; precision std 0.013266499161421575\n",
+      "recall mean: 0.556; recall std 0.007999999999999967\n",
+      "f1 mean: 0.546; f1 std 0.0162480768092719\n"
      ]
     }
    ],
@@ -349,6 +333,147 @@
     "print(f'precision mean: {precision.mean()}; precision std {precision.std()}')\n",
     "print(f'recall mean: {recall.mean()}; recall std {recall.std()}')\n",
     "print(f'f1 mean: {f1.mean()}; f1 std {f1.std()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c76bdb5",
+   "metadata": {},
+   "source": [
+    "# CatBoost "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8a647b95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = np.array([0.59, 0.65, 0.63, 0.64, 0.60])\n",
+    "precision = np.array([0.58, 0.65, 0.63, 0.62, 0.58])\n",
+    "recall = np.array([0.59, 0.65, 0.62, 0.64, 0.60])\n",
+    "f1 = np.array([0.58, 0.64, 0.62, 0.62, 0.57])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "91d1cd87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy mean: 0.6220000000000001; accuracy std 0.02315167380558047\n",
+      "precision mean: 0.612; precision std 0.027856776554368263\n",
+      "recall mean: 0.62; recall std 0.02280350850198278\n",
+      "f1 mean: 0.606; f1 std 0.026532998322843223\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'accuracy mean: {accuracy.mean()}; accuracy std {accuracy.std()}')\n",
+    "print(f'precision mean: {precision.mean()}; precision std {precision.std()}')\n",
+    "print(f'recall mean: {recall.mean()}; recall std {recall.std()}')\n",
+    "print(f'f1 mean: {f1.mean()}; f1 std {f1.std()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49627a54",
+   "metadata": {},
+   "source": [
+    "$$ \\text{Gain}(A, Q) = \\text{impurity}(A, S) - \\sum^q_{i=1} \\frac{|A_i|}{|A|}\\text{impurity}(A_i, Q), $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18d59eab",
+   "metadata": {},
+   "source": [
+    "$$ \\text{H}(A, S) = -\\sum^S_{i=1} \\frac{m_i}{n} \\log \\frac{m_i}{n}, $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c763b434",
+   "metadata": {},
+   "source": [
+    "$$ \\text{Gini}(A, S) = 1 - \\sum^S_{i=1} \\frac{|A_i|}{|A|}. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fad2b3f",
+   "metadata": {},
+   "source": [
+    "$$ \\text{Normalization}(x) = \\frac{x - x_{min}}{x_{max} - x_{min}}. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3c583a7",
+   "metadata": {},
+   "source": [
+    "$$ \\text{Standartization}(x) = \\frac{x - x_{mean}}{x_{std}}. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5be6c8f3",
+   "metadata": {},
+   "source": [
+    "$$ \\frac{\\sum^{p-1}_{j=1} [x_{\\sigma_j, k} = x_{\\sigma_p, k}] Y_{\\sigma_j} + a \\cdot P}{\\sum^{p-1}_{j=1} [x_{\\sigma_j, k} = x_{\\sigma_p, k}] + a}, $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49e149b5",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma(x) = \\frac{1}{1 + e^{-x}}. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cae987bf",
+   "metadata": {},
+   "source": [
+    "$$ \\tanh(x) = 2 \\sigma (2x) - 1. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96f7e6a4",
+   "metadata": {},
+   "source": [
+    "$$ \\text{Maxout}(x) = \\max(w^T_1x + b_1, w^T_2x + b_2). $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e0e0315",
+   "metadata": {},
+   "source": [
+    "$$ \\text{feature_importance}_F = \\sum_{trees, leafs_F} (v_1 - avr)^2 \\cdot c_1 + (v_2 - avr)^2 \\cdot c_2, $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b208f262",
+   "metadata": {},
+   "source": [
+    "$$ avr = \\frac{v_1 \\cdot c_1 + v_2 \\cdot c_2}{c_1 + c_2}, $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29f892b4",
+   "metadata": {},
+   "source": [
+    "$$ \\text{feature_total_importance}_j = \\text{feature_importance} + \\sum^N_{i=1} \\text{average_feature_importance}_i $$"
    ]
   }
  ],
