раскрасил категориальные признаки

--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -350,10 +350,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy = np.array([0.59, 0.65, 0.63, 0.64, 0.60])\n",
-    "precision = np.array([0.58, 0.65, 0.63, 0.62, 0.58])\n",
-    "recall = np.array([0.59, 0.65, 0.62, 0.64, 0.60])\n",
-    "f1 = np.array([0.58, 0.64, 0.62, 0.62, 0.57])"
+    "accuracy = np.array([0.59, 0.68, 0.64, 0.64, 0.60])\n",
+    "precision = np.array([0.58, 0.67, 0.64, 0.63, 0.58])\n",
+    "recall = np.array([0.59, 0.68, 0.64, 0.64, 0.60])\n",
+    "f1 = np.array([0.57, 0.67, 0.64, 0.62, 0.57])"
    ]
   },
   {
@@ -366,10 +366,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy mean: 0.6220000000000001; accuracy std 0.02315167380558047\n",
-      "precision mean: 0.612; precision std 0.027856776554368263\n",
-      "recall mean: 0.62; recall std 0.02280350850198278\n",
-      "f1 mean: 0.606; f1 std 0.026532998322843223\n"
+      "accuracy mean: 0.6300000000000001; accuracy std 0.032249030993194226\n",
+      "precision mean: 0.62; precision std 0.03521363372331805\n",
+      "recall mean: 0.6300000000000001; recall std 0.032249030993194226\n",
+      "f1 mean: 0.614; f1 std 0.039293765408777034\n"
      ]
     }
    ],
